broken style fix

--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,7 @@ header {
 }
 .word-display span {
     position: relative;
+    display: inline-block;
     font-size: 60px;
     color: #ffffff;
     text-transform: uppercase;
